fixing overflow

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@ nav a:focus{
   background: #858585 url("../images/header.jpg") no-repeat center fixed;
   background-size: cover;
   min-height: 400px;
-  
 }
 
 /* Requirement 5 code here -- Do not remove this comment. */
@@ -86,7 +85,7 @@ img {
 .text {
   align-self: center;
   max-height: 40vh;
-  overflow-y: scroll;
+  overflow: auto;
 }
 
   /*Add the media query here.  Make sure to */
@@ -140,14 +139,10 @@ img {
   }
 
   /* Requirement 15 code here -- Do not remove this comment. */
-  /* .about-image,
-  .clients-image,
-  .method-image,
-  .contact-image{ */
   img{
     max-width: 100%;
     max-height: 100%;
-    object-fit: contain;
+    /* object-fit: contain; */
   }
 }
 
